removed dependency on hard coded enum values